--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     color: #1B67B3;
 }
   .calculadora {
-    background-color: #212121;
+    background-color: #0e0e0e;
     border-radius: 12px;
     box-shadow: 0 3px 6px rgb(255, 255, 255);
     padding: 10px 20px;
